source/stylesheets/all.scss
//= require bootstrap.min

@charset "utf-8";

textarea:focus, input:focus{
    outline: 0;
}

.row {
  margin-left:0;
}
html,body {
  height:100%;
}
body {
  font-family: "Bitter", "Arial", sans-serif; 
  color: rgba(0, 0, 0, .7);
  background-color:#f9f9f9;
}

section {
  float:left;
  width:100%;
  position:relative;
  clear:both;
  padding-top:1em;
  padding-bottom:1em;
    h2{
      font-weight: bold;
      font-size: 2.5em;
      letter-spacing: -1px;
      padding: 1em 0 1em 0;
      text-align:center;
      color:rgb(226, 102, 0);
    }
}

img {
  display:block;
  width:100% !important;
  height:auto;
}

.no-padding {
  padding:0;
}

.container {
  
}

.lower {
  text-transform: lowercase;
  font-size:20px;
  list-style-type:none;
  display:inline;
}

#header, #footer {
  background: #3a3531 url('/images/bg-header.png');
  background-size:10px 10px;
  padding: 1.2em 0;
}

#logo {
  margin-left:0;
  max-width:300px;
  margin:auto;
}


.caption {
  position:absolute;
  display:block;
  top:0;
  left:10px;
  right:10px;
  bottom:0;
  display:none;
  background-color: rgba(0,0,0,.75);  
  

  /* For IE 5-7 */  
  filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=80);  
  /* For IE 8 */  
  -MS-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=80)";  
  }  

.caption h3 {
  color:#fff;
  text-align:center;
  text-shadow:1px 1px 1px #222;
  padding-top:15%;
  font-size:1.5em;
}

.jp {
  display:none;
}

#navbar .jp {
  display:none;
}

.language a{
  color: #ff6900 !important;
  opacity:.6;
}

.language a:hover {
  color: #ff6900;
  opacity:1;
}


/*Header*/
#nav {
  margin:0;
  padding:0;
  height:60px;
}

#navbar {
  border-radius:0;
}

#navbar.affix {
    position: fixed;
    width: 100%;
    top:0;
    z-index: 5;
    border-radius:0;
    moz-border-radius:0;
    -webkit-border-radius:0;
} 

.navbar-collapse {
  padding-left:0;
}

.social-icon {
  display:inline-block;
  padding-right:20px;
  opacity:.4;
  padding: 7px 0 6px 0px;
}

.social-icon:hover{
  opacity:1;
}

#events {
  margin-top:35px;
  text-align:center;
  h3 {
    display:inline;
  }
  li { 
    font-size:1.2em;
    color:rgb(255,105,0);
    display:inline;
    text-decoration:none;
    a {
      padding:40px 0 40px 4px;
      color:#fff;
    }
  }
}


#social {
  margin-top:2em;
}

#social-links a {
  text-decoration:none;
}
#social-links {
  width:400px;
  margin:auto;
  text-align:center;
}


/*Welcome*/

#welcome .container {
  padding:2em 0;
  border-bottom:1px solid #ccc;
}

#about{
  font-size:1.25em;
  line-height:1.5em;
  text-align:center;
}

#newsletter {
  padding-top:20px;
  p {
    text-align:center;
    font-size:.9em;
  }
}

/*Photos*/



#galleries {
  h3{
    font-size:18px;
    text-align:center;
  }
  img {
    border:1px solid #aaa;
    box-shadow:1px 1px 8px #aaa;
    -webkit-box-shadow:1px 1px 8px #aaa;
    -mozkit-box-shadow:1px 1px 8px #aaa;
  }
}

.gallery-img {
  position:relative;
  overflow:hidden;
  margin-bottom:20px;
  padding:0 10px;
  max-height: 240px;
  .caption {
    pointer-events:none;
  }
  .caption h3{
    margin-top: 15%;
  }
}

/*Videos*/

#videos {
  h3{
    text-align:center;
  }
}

#player {
  height:100%;
  position: relative;
  margin:auto;
}
.video-container {
    position: relative;
    max-width:960px;
    margin:auto;
    padding-bottom: 56.25%;
    height: 0; 
}
 
.video-container iframe,
.video-container object,
.video-container embed {
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
}



.carousel-wrap{
  width:100%;
  overflow-x:scroll;
  overflow-y:hidden; 
  padding-top:10px;
  margin-top:2em;
  border-top:1px solid #ccc;
  border-bottom:1px solid #ccc;
}


.youtube .thumbnail {
    width:  200px;
    cursor:pointer;
}

.thumb-container{
  width: 200px;
  display:inline-block;
  vertical-align:top;
  margin:20px;
  text-align:center;
  position:relative;
    img {
      box-shadow: 1px 1px 6px #888;
      -webkit-box-shadow: 1px 1px 6px #888;
      -moz-box-shadow: 1px 1px 6px #888;
      padding:0;
      margin:0;
    }
}
.thumbnail {
  border:1px solid #444;
  box-shadow: 1px 1px 3px #aaa;
  -webkit-box-shadow: 1px 1px 3px #aaa;
  -moz-box-shadow: 1px 1px 3px #aaa;
  padding:0;
}

.player {
  display:block; 
  margin:auto; 
  overflow: auto;
  border:1px solid #444;
  box-shadow: 2px 2px 8px #888;
  -webkit-box-shadow: 2px 2px 8px #888;
  -moz-box-shadow: 2px 2px 8px #888;
}

.yt-title {
  padding-top:10px;
  display:block;
  cursor:pointer;
  width: 200px;
}

.carItemContain{
  width:0;
  height:100px;
}

.video-details{
 width:80%;
 max-width:960px;
 margin:auto;
 padding:1em;
 text-align:center;
}

.video-description{
  text-align:left;
}

/*Organizers*/
  .organizer{
  position:relative;
  cursor:pointer;
  overflow:auto;
  margin-bottom:30px;
    .caption{
      left:15px;
      right:15px;
    }
    .caption li{
      list-style-type: none;
      text-align:center;
      color:#fff;
      padding-top:5px;
        a{
          color: rgba(255,255,255,1);
          text-decoration:none;
        }
        a:hover{
         color: rgba(255,255,255,.7);
        }
    }
    img{
      display:block;
      border:1px solid #aaa;
       box-shadow:1px 1px 8px #aaa;
      -webkit-box-shadow:1px 1px 8px #aaa;
      -mozkit-box-shadow:1px 1px 8px #aaa;
    }
}



#organizers {
 padding-bottom:4em;
}

/*Footer*/

#footer{
text-align:center
}

#credits {
  color:#ccc;
  padding: 2em 0 1em 0;
    a {
      color: #ff6900;
    }
}

#created {
  padding-top:.5em;
}


/*Mail Chimp*/

#mc_embed_signup input.email{
  display:inline-block;
}

#mc_embed_signup input.email:focus {
  box-shadow:none !important;
  color:#333;
}


#mc_embed_signup input.button{
  display:inline-block;
  height:37px;
  border: 1px solid #aaa;
  background-color:#0088cc;
}

#mc_embed_signup input.button:hover{
  background-color:#00689C;
}


/* Squaresend */

.sqs-wrapper {
  position:fixed !important;
}

.sqs-center{
  top:5% !important;
}

//Bootstrap media queries

/* Medium devices (desktops, 992px and up) */

